✨ Implement `/api/users/me` Route
- Implement JWT verify middleware.
- Remap `/api/auth/signup` to `/api/auth/register` to remain compatible with Boat API.
