# docs/swagger.yaml
@@ -99,7 +99,7 @@ paths:
       summary: Login
       tags:
       - auth
-  /auth/signup:
+  /auth/register:
     post:
       consumes:
       - application/json
@@ -293,4 +293,39 @@ paths:
       summary: Get boat by id
       tags:
       - boats
+  /users/me:
+    get:
+      consumes:
+      - application/json
+      description: Get current User
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UserDTO'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - JWT: []
+      summary: Get Me
+      tags:
+      - auth
+      - users
+securityDefinitions:
+  JWT:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
